# banger

./: .dockerignore  404.html  CNAME  Cargo.toml  Dockerfile  Trunk.toml  banger-108b88cdddd390cd.js  banger-108b88cdddd390cd_bg.wasm  banger-25347017327727f9.js  banger-25347017327727f9_bg.wasm  banger-6bdc2eb709fb84e8.js  banger-6bdc2eb709fb84e8_bg.wasm  banger-71c5d10581d00843.js  banger-71c5d10581d00843_bg.wasm  banger-75bfc08e676fe5b1.js  banger-75bfc08e676fe5b1_bg.wasm  banger-ac7c9cda66e8fa0f.js  banger-ac7c9cda66e8fa0f_bg.wasm  banger-b73c063bde1d69e1.js  banger-cbb0d63664a9f177.js  banger-dade535c44924754.js  banger-dade535c44924754_bg.wasm  banger-efc3d8736703a972.js  banger-efc3d8736703a972_bg.wasm  banger-f740273ca915aee9.js  banger-f740273ca915aee9_bg.wasm  banger.code-workspace  fly.toml  global-53dbcac1afb1ad7b.css  global-783aeb42ce787371.css  global-83f748d48ac1679e.css  global-e17b4525a4999c6a.css  index.html  manifest.json
.github/workflows/: dioxus.yml  rust.yml
crates/backend/: Cargo.toml  build.rs
crates/backend/src/: api.rs  app_content.rs  error.rs  main.rs  serde.rs  static_content.rs
crates/backend/src/serde/: from_to_str.rs
crates/backend/templates/: 404.html
crates/client/: Cargo.toml  Trunk.toml  index.html
crates/client/src/: consts.rs
crates/client/src/atoms/: persist.rs
crates/client/src/components/: spotify.rs
crates/client/src/hooks/: use_persist.rs  use_spotify.rs
crates/client/src/hooks/use_spotify/: auth.rs  model.rs
crates/client/styles/: app.scss  global.css  global.scss
crates/model/: Cargo.toml
js/: sw.js  sw_install.js
src/: hooks.rs  main.rs  oauth.rs  use_spotify.rs
src/hooks/: use_persist.rs  use_spotify.rs
src/hooks/use_spotify/: auth.rs  state.rs
src/use_spotify/: auth.rs  model.rs  state.rs
styles/: global.scss
