[package]
name = "banger"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.2.4", features = ["web", "fermi"] }
gloo-net = "0.2.2"
gloo-storage = "0.2.1"
monostate = "0.1.0"
serde = { version = "1.0.137", features = ["derive"] }
time = { version = "0.3.11", features = ["serde"] }
tracing = "0.1.35"
tracing-wasm = "0.2.1"
