[package]
name = "spotify-banger-backend"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
askama = { version = "0.11.1" }
axum = { version = "0.5.11", features = ["http2"] }
dotenv = "0.15.0"
hex = "0.4.3"
mime_guess = "2.0.4"
rust-embed = { version = "6.4.0", features = ["compression"] }
spotify-banger-model = { path = "../model" }
tokio = { version = "1.19.2", features = ["full", "tracing"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
