[package]
name = "spotify-banger-backend"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
askama = { version = "0.11.1" }
axum = { version = "0.5.11", features = ["http2", "headers", "query"] }
dotenv = "0.15.0"
hex = "0.4.3"
mime_guess = "2.0.4"
monostate = "0.1.0"
rand = "0.8.5"
rust-embed = { version = "6.4.0", features = ["compression"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_urlencoded = "0.7.1"
spotify-banger-model = { path = "../model" }
tokio = { version = "1.19.2", features = ["full", "tracing"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
base64 = "0.13.0"
const_format = "0.2.26"
reqwest = { version = "0.11.11", features = [
    "json",
    "native-tls-vendored",
    "deflate",
    "brotli",
    "gzip",
    "socks",
] }
