[package]
name = "spotify-banger-backend"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
askama = { version = "0.11.1" }
axum = { version = "0.5.11", features = ["headers", "query"] }
base64 = "0.13.0"
const_format = "0.2.26"
dotenv = "0.15.0"
monostate = "0.1.0"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json", "native-tls-vendored", "brotli"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_urlencoded = "0.7.1"
spotify-banger-model = { path = "../model" }
tokio = { version = "1.19.2", features = ["full", "tracing"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["cors", "compression-br", "set-header", "trace", "metrics", "fs"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
