[package]
name = "spotify-banger"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
base64 = "0.13.0"
const_format = "0.2.25"
dioxus = { version = "0.2.4", features = ["web", "fermi"] }
futures-util = "0.3.21"
getrandom = { version = "0.2.7", features = ["js"] }
gloo-net = "0.2.2"
gloo-storage = "0.2.1"
gloo-utils = "0.1.4"
instant = { version = "0.1.12", features = ["wasm-bindgen", "inaccurate"] }
monostate = "0.1.0"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
serde_urlencoded = "0.7.1"
spotify-banger-model = { path = "../model" }
tracing = "0.1.35"
tracing-log = "0.1.3"
tracing-wasm = "0.2.1"
